--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "markdown-it": "^13.0.1",
+    "markdown-it-link-attributes": "^4.0.0",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
