--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "markdown-it": "^13.0.1",
     "markdown-it-link-attributes": "^4.0.0",
     "next": "12.2.0",
+    "prism": "^4.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "remark-prism": "^1.3.6"
   },
   "devDependencies": {
     "eslint": "8.19.0",
