--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/react-syntax-highlighter": "^15.5.3",
+    "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
-    "next": "latest",
+    "next": "^12.2.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
