--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "remark-html": "^15.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "sass": "^1.53.0",
