--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "next": "^12.2.2",
+    "prismjs": "^1.28.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^14.0.2",
@@ -16,7 +17,9 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.4",
+    "@types/prismjs": "^1.26.0",
     "autoprefixer": "^10.4.7",
+    "babel-plugin-prismjs": "^2.1.0",
     "eslint": "^8.20.0",
     "eslint-config-next": "^12.2.3",
     "postcss": "^8.4.14",
